objects/Product_Setting__mdt.object
<CustomObject>
    <description>This custom metadata type holds sets of Products to allow for configurable settings regarding Products</description>
    <fields>
        <fullName>BalanceFacilitySize__c</fullName>
        <label>Balance / Facility Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckBalanceFacilitySize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Balance / Facility Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>CurrencyIsoCode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityCountry__c</fullName>
        <description>Holds the opportunity countries related to the product setting in question</description>
        <inlineHelpText>Holds the opportunity countries related to the product setting in question</inlineHelpText>
        <label>Opportunity Country</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductHouse__c</fullName>
        <label>Product House</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLevel__c</fullName>
        <description>The level of the Product in this Product Set (Allows specifying a Product at any level)</description>
        <label>Product Level</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>The name of the Product</description>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSet__c</fullName>
        <description>The set of products grouped for a particular functionality eg. Product Partner exclusion</description>
        <label>Product Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Partner_Team__c</fullName>
        <label>Product Partner Team</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Setting</label>
    <pluralLabel>Product Settings</pluralLabel>
</CustomObject>